--- a/configure.ac
+++ b/configure.ac
@@ -5257,6 +5257,7 @@ AM_CONDITIONAL(HOST_AMD64, test x$HOST = xAMD64)
 AM_CONDITIONAL(HOST_ARM, test x$HOST = xARM)
 AM_CONDITIONAL(HOST_ARM64, test x$HOST = xARM64)
 AM_CONDITIONAL(HOST_WASM, test x$HOST = xWASM)
+AM_CONDITIONAL(TARGET_WASM, test x$TARGET = xWASM)
 
 AM_CONDITIONAL(CROSS_COMPILE, test "x$host" != "x$target")
 
