--- a/sdks/wasm/ProxyDriver/ProxyDriver.csproj
+++ b/sdks/wasm/ProxyDriver/ProxyDriver.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
