[wasm] Skeleton for wasm specific implementations of a bunch of OS stuff.
This commit is incomplete because we need to implement / investigate all missing functions that I added as comments in w32process-wasm.c.
Savings for a release build are of the order of 100kb for interp-release.

The icalls should be all implemented as throwing PSNE.

The non-icall functions require some investigation.

--- a/mono/metadata/Makefile.am
+++ b/mono/metadata/Makefile.am
@@ -40,6 +40,26 @@ export HOST_CC
 AM_CFLAGS = -O
 else
 
+if HOST_WASM
+assembliesdir = $(exec_prefix)/lib
+confdir = $(sysconfdir)
+wasm_sources = \
+	console-wasm.c \
+	w32mutex-wasm.c \
+	w32semaphore-wasm.c \
+	w32event-wasm.c \
+	w32process-wasm.c \
+	w32process-wasm-internals.h \
+	w32socket-wasm.c \
+	w32file-wasm.c \
+	w32file-wasm-glob.c \
+	w32file-wasm-glob.h \
+	w32error-wasm.c
+
+platform_sources = $(wasm_sources)
+
+else
+
 assembliesdir = $(exec_prefix)/lib
 confdir = $(sysconfdir)
 unix_sources = \
@@ -60,6 +80,7 @@ unix_sources = \
 	w32error-unix.c
 
 platform_sources = $(unix_sources)
+endif
 endif
 
 glib_libs = $(top_builddir)/mono/eglib/libeglib.la
